@@ -90,13 +90,16 @@ void waveformTemplate(struct parSet *par, struct interferometer *ifo[], int ifon
 void templateApostolatos(struct parSet *par, struct interferometer *ifo[], int ifonr, int injectionWF, struct runPar run)
 {
   
-  double pMc=0.0,pEta=0.0,pTc=0.0,pLogDl=0.0,pSpin1=0.0,pSpCosTh1=0.0,pRA=0.0,pLongi=0.0,pSinDec=0.0,pPhase=0.0,pSinThJ0=0.0,pPhiJ0=0.0,pSpPhi1=0.0;
+  double pMc=0.0,pEta=0.0,pTc=0.0,pLogDl=0.0,pSpin1=0.0,pSpCosTh1=0.0,pRA=0.0,pSinDec=0.0,pPhase=0.0,pSinThJ0=0.0,pPhiJ0=0.0,pSpPhi1=0.0;
+  double pLongi=0.0; //,pDl=0.0;
   
   if(injectionWF==1) {                                               // Then this is an injection waveform template:
     pMc       = par->par[run.injRevID[61]];                                           // 61: Mc
     pEta      = par->par[run.injRevID[62]];                                           // 62: eta
     pTc       = par->par[run.injRevID[11]];                                           // 11: t_c
-    pLogDl    = par->par[run.injRevID[22]];                                           // 22: log(d_L)
+    //if(run.injParUse[21]) pDl = exp(log(par->par[run.injRevID[21]]/3.0));             // 21: (d_L)^3 -> d_L
+    //if(run.injParUse[22]) pDl = exp(par->par[run.injRevID[22]]);                      // 22: log(d_L) -> d_L
+    pLogDl    = par->par[run.injRevID[22]];                                           // 22: log(d_L)	
     pSpin1    = par->par[run.injRevID[71]];                                           // 71: a_spin1
     pSpCosTh1 = par->par[run.injRevID[72]];                                           // 72: cos(theta_spin1)
     pRA       = par->par[run.injRevID[31]];                                           // 31: RA
@@ -110,6 +113,8 @@ void templateApostolatos(struct parSet *par, struct interferometer *ifo[], int i
     pMc       = par->par[run.parRevID[61]];                                           // 61: Mc
     pEta      = par->par[run.parRevID[62]];                                           // 62: eta
     pTc       = par->par[run.parRevID[11]];                                           // 11: t_c
+    //if(run.mcmcParUse[21]) pDl = exp(log(par->par[run.parRevID[21]]/3.0));             // 21: (d_L)^3 -> d_L
+    //if(run.mcmcParUse[22]) pDl = exp(par->par[run.parRevID[22]]);                      // 22: log(d_L) -> d_L
     pLogDl    = par->par[run.parRevID[22]];                                           // 22: log(d_L)	
     pSpin1    = par->par[run.parRevID[71]];                                           // 71: a_spin1		
     pSpCosTh1 = par->par[run.parRevID[72]];                                           // 72: cos(theta_spin1)
@@ -126,6 +131,7 @@ void templateApostolatos(struct parSet *par, struct interferometer *ifo[], int i
   
   //printf(" Apo WF pars:  injWF: %i, Mc: %f, eta: %f, tc: %f, logD: %f, RA: %f, dec: %f, phi: %f, sin(th_J0): %f, phi_J0: %f, spin1: %f, spcos(th): %f, sp_phi1: %f  \n",
   //injectionWF,pMc, pEta, pTc, pLogDl, pRA, pSinDec, pPhase, pSinThJ0, pPhiJ0, pSpin1, pSpCosTh1, pSpPhi1);
+  //printf("  %f\n",log(pDl));
   
   double x=0.0;
   double Mc=0.0,m1=0.0,m2=0.0,Mtot=0.0,mu=0.0;
@@ -147,6 +153,10 @@ void templateApostolatos(struct parSet *par, struct interferometer *ifo[], int i
     n_L[i] = 0.0;
   }
   
+  //for(i=0;i<100;i++) {
+  // printf("  %5i  %5i  %5i  %5i  %s\n",i,run.parDef[i],run.mcmcParUse[i],run.injParUse[i],run.parAbrev[i]);
+  //}
+  
   localtc    = par->loctc[ifonr];
   altitude   = par->localti[ifonr];
   azimuth    = par->locazi[ifonr];
@@ -158,7 +168,8 @@ void templateApostolatos(struct parSet *par, struct interferometer *ifo[], int i
   double n_z[3] = {0.0,0.0,1.0};                                                                                         // North in global coordinates
   double normalvec[3];                                                                                                  
   for(i=0;i<3;i++) normalvec[i] = ifo[ifonr]->normalvec[i];                                                              // Detector position normal vector = local zenith vector z'
-  double D_L = exp(pLogDl)*Mpcs;                                                                                         // Source luminosity distance, in seconds
+  //double D_L = pDl*Mpcs;                                                                                                 // Source luminosity distance, in seconds
+  double D_L = exp(pLogDl)*Mpcs;                                                                                                 // Source luminosity distance, in seconds
   double coslati = sqrt(1.0-pSinDec*pSinDec);
   double n_N[3] = { cos(pLongi)*coslati , sin(pLongi)*coslati , pSinDec };                                               // n_N: Position unit vector = N^
   
